BIG CHANGES LOOK AT THE CODE : EXPLAINED ON FACEBOOK FOR THE MOST PART

--- a/.gitignore
+++ b/.gitignore
@@ -93,4 +93,7 @@ flycheck_*.el
 # directory configuration
 .dir-locals.el
 
+# test your code
+test.scala
+
 # End of https://www.gitignore.io/api/emacs
