--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
-
+src/main/resources/Parameters
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
